--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
@@ -27,7 +28,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-69.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="21.0" layoutY="-107.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="154.0" layoutY="635.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="48.0" prefWidth="255.0" style="-fx-background-color: black;" text="BUSCAR O ELIMINAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
@@ -52,5 +53,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <ComboBox fx:id="comboBoxSorting" layoutX="48.0" layoutY="131.0" onAction="#sortComboBox" prefWidth="150.0" />
    </children>
 </Pane>
