--- a/src/ui/game-pane.fxml
+++ b/src/ui/game-pane.fxml
@@ -15,7 +15,7 @@
       <ImageView fx:id="mainShip" fitHeight="84.0" fitWidth="114.0" layoutX="222.0" layoutY="602.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="250.0" layoutY="353.0" mnemonicParsing="false" opacity="0.0" text="Button" />
       <Circle fx:id="circle" disable="true" fill="WHITE" layoutX="269.0" layoutY="602.0" radius="10.0" stroke="BLACK" strokeType="INSIDE" />
-      <Button alignment="CENTER" layoutX="409.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="33.0" prefWidth="129.0" style="-fx-background-color: BLACK;" text="ABANDONAR" textFill="#57cbab">
+      <Button alignment="CENTER" layoutX="411.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="33.0" prefWidth="129.0" style="-fx-background-color: BLACK;" text="ABANDONAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="15.0" />
          </font>
@@ -23,12 +23,12 @@
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
       </Button>
-      <Label layoutX="199.0" layoutY="14.0" text="SCORE:" textFill="WHITE">
+      <Label layoutX="140.0" layoutY="14.0" text="SCORE:" textFill="WHITE">
          <font>
             <Font name="Malgun Gothic Bold" size="23.0" />
          </font>
       </Label>
-      <Label fx:id="score" alignment="CENTER" layoutX="276.0" layoutY="14.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
+      <Label fx:id="score" alignment="CENTER" layoutX="217.0" layoutY="14.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
          <font>
             <Font name="Malgun Gothic Bold" size="23.0" />
          </font>
@@ -44,5 +44,15 @@
          </font>
       </Label>
       <Rectangle fx:id="bullet" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" layoutX="265.0" layoutY="141.0" stroke="BLACK" strokeType="INSIDE" width="8.0" />
+      <Label layoutX="276.0" layoutY="14.0" text="VIDAS:" textFill="WHITE">
+         <font>
+            <Font name="Malgun Gothic Bold" size="23.0" />
+         </font>
+      </Label>
+      <Label fx:id="lifes" alignment="CENTER" layoutX="353.0" layoutY="12.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
+         <font>
+            <Font name="Malgun Gothic Bold" size="23.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
